--- a/BlogCore/appsettings.json
+++ b/BlogCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlogCore-7188c711-9482-44e3-8b36-f819bb5f9f3a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PostgreSQLConnection": "User ID=postgres;Password=1234;Server=127.0.0.1;Port=5432;Database=BlogCore;"
   },
   "Logging": {
     "LogLevel": {
