--- a/BlogCore/appsettings.json
+++ b/BlogCore/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgreSQLConnection": "User ID=postgres;Password=1234;Server=127.0.0.1;Port=5432;Database=BlogCore;"
+    "PostgreSQLConnection": "User ID=postgres;Password=1234;Server=127.0.0.1;Port=5432;Database=BlogCore;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BlogCore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
